# achlys-uq

./: LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml
achlys-uq/: run_desorp  run_desorp.sh  run_desorp_umbridge  stack_outputs
achlys-uq/surrogate/: Surrogate.ipynb  multi_gp.p  parameters.csv  pipeline.pickle  surrogate.py  torch_state_pipeline.pickle
achlys-uq/surrogate/samples/: sample_0.csv  sample_1.csv  sample_10.csv  sample_100.csv  sample_1000.csv  sample_1001.csv  sample_1002.csv  sample_1003.csv  sample_1004.csv  sample_1005.csv  sample_1006.csv  sample_1007.csv  sample_1008.csv  sample_1009.csv  sample_101.csv  sample_1010.csv  sample_1011.csv  sample_1012.csv  sample_1013.csv  sample_1014.csv  sample_1015.csv  sample_1016.csv  sample_1017.csv  sample_1018.csv  sample_1019.csv  sample_102.csv  sample_1020.csv  sample_1021.csv  sample_1022.csv  sample_1023.csv  sample_1024.csv  sample_1025.csv  sample_1026.csv  sample_1027.csv  sample_1028.csv  sample_1029.csv  sample_103.csv  sample_1030.csv  sample_1031.csv  sample_1032.csv  (+4056 more)
app/: Dockerfile  pyproject.toml
app/app/api/: auth.py  database.py  main.py  settings.py
app/app/static/: client.js
app/app/static/styles/: base.css
app/app/templates/: base.html  login.html
app/app/templates/components/: message_box.html
app/app/templates/pages/: index.html
docker/achlys-uq/: Dockerfile
scripts/: bashrc
